--- a/config.json
+++ b/config.json
@@ -1,20 +1,12 @@
-# gpthub
-a hub for various gpt model
-
-# 配置
-支持文件和环境变量读取
-
-本地config.json文件示例
-```
 {
   "spark": {
     "wss_domain": "wss://aichat.xf-yun.com/v1/chat",
     "app_id": "",
-    "app_secret":"",
-    "app_key":""
+    "app_secret":"NzQ1ZTA2OTUyZWM0MDE3ODVjNDdmYjYz",
+    "app_key":"cc373593680b3e1e822e43a11a3a1083"
   },
   "openapi": {
-    "api_key": "",
+    "api_key": "ECEA38B7-178F-45A0-8018-7BE2D13B9351",
     "auto_pass": true,
     "session_timeout": 60,
     "max_tokens": 1024,
@@ -24,4 +16,3 @@ a hub for various gpt model
     "session_clear_token": "清空会话"
   }
 }
-```
